--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
             <header>               
-                    <img src="logo.svg" alt="logo">
+                    <img src="obr/logo.svg" alt="logo">
                     <nav>
                         <a class="active" href="index.html">Domov</a>
                         <a href="zoznamproduktov.html" >Zoznam produktov</a>
@@ -77,7 +77,9 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, voluptatem possimus vel veniam et illum dolorem, quisquam natus quos alias maxime, architecto minus voluptatibus. Dolores dignissimos veritatis alias totam blanditiis?
                 </div>
                 <footer>
-                    tu pis obsah
+                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a> 
+                    <p>© 2019 ROKOVCI</p>
+                    <a href="#"><img src="obr/up.png" alt="HORE"></a>
                 </footer>
     </div>
     
