--- a/zoznamproduktov.html
+++ b/zoznamproduktov.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
             <header>
-                    <img src="logo.svg" alt="logo">
+                    <img src="obr/logo.svg" alt="logo">
                     <nav>
                         <a  href="index.html">Domov</a>
                         <a class="active" href="zoznamproduktov.html">Zoznam produktov</a>
@@ -22,16 +22,27 @@
                 <div id="obsah">
                     <main>
                         <ul class="container">
-                            <li id="item1"><h1>Roko Disk</h1><img src="roko.jpg" alt="roko" width="250"> <h2>25 €</h2> <p>Tento disk pobavi celu rodinu</p></li>
-                            <li id="item2"><h1>Den s Rokom</h1><img src="roko.jpg" alt="roko1" width="250"></li>
-                            <li id="item3"><h1>Roko tricko</h1><img src="roko.jpg" alt="roko2" width="250"></li>
-                            <li id="item4"><h1>Rokove vlasy</h1><img src="roko.jpg" alt="roko3" width="250"></li>
-                            <li id="item5"><h1>S Rokom na pivo</h1><img src="roko.jpg" alt="roko4" width="250"></li>
+                            <li id="item1"><h1>Roko Disk</h1><img src="obr/roko.jpg" alt="roko" width="250"> <h2>25 €</h2> <p>Tento disk pobavi celu rodinu</p></li>
+                            <li id="item2"><h1>Den s Rokom</h1><img src="obr/roko.jpg" alt="roko1" width="250"></li>
+                            <li id="item3"><h1>Roko tricko</h1><img src="obr/roko.jpg" alt="roko2" width="250"></li>
+                            <li id="item4"><h1>Rokove vlasy</h1><img src="obr/roko.jpg" alt="roko3" width="250"></li>
+                            <li id="item5"><h1>S Rokom na pivo</h1><img src="obr/roko.jpg" alt="roko4" width="250"></li>
                         </ul>
                     </main>
-  
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <footer>
-                    tu pis obsah
+                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a> 
+                    <p>© 2019 ROKOVCI</p>
+                    <a href="#"><img src="obr/up.png" alt="HORE"></a>
                 </footer>
     </div>
     
