--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
             <header>               
-                    <img src="obr/logo.svg" alt="logo">
+                    <a href="index.html"><img src="obr/logo.svg" alt="logo"></a> 
                     <nav>
                         <a class="active" href="index.html">Domov</a>
                         <a href="zoznamproduktov.html" >Zoznam produktov</a>
