--- a/zoznamproduktov.html
+++ b/zoznamproduktov.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>RokoShop | Zoznam produktov</title>
-</head>
-<body>
-    <div id="wrapper">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="style.css">
+        <title>RokoShop | Zoznam produktov</title>
+    </head>
+
+    <body>
+        <div id="wrapper">
             <header>
-                    <a href="index.html"><img src="obr/logo.svg" alt="logo"></a>
-                    <nav>
-                        <a  href="index.html">Domov</a>
-                        <a class="active" href="zoznamproduktov.html">Zoznam produktov</a>
-                        <a href="onas.html">O nás</a>
-                        <a href="kontakt.html">Kontakt</a>
-                    </nav>
-                        
-                </header>
-                <div id="obsah">
-                    <main>
-                        <ul class="container">
-                            <li id="item1"><h1>Roko Disk</h1><img src="obr/roko.jpg" alt="roko" width="250"> <h2>25 €</h2> <p>Tento disk pobavi celu rodinu</p></li>
-                            <li id="item2"><h1>Den s Rokom</h1><img src="obr/roko.jpg" alt="roko1" width="250"></li>
-                            <li id="item3"><h1>Roko tricko</h1><img src="obr/roko.jpg" alt="roko2" width="250"></li>
-                            <li id="item4"><h1>Rokove vlasy</h1><img src="obr/roko.jpg" alt="roko3" width="250"></li>
-                            <li id="item5"><h1>S Rokom na pivo</h1><img src="obr/roko.jpg" alt="roko4" width="250"></li>
-                        </ul>
-                    </main>
+                <a href="index.html"><img src="obr/logo.svg" alt="logo"></a>
+                <nav>
+                    <a href="index.html">Domov</a>
+                    <a class="active" href="zoznamproduktov.html">Zoznam produktov</a>
+                    <a href="onas.html">O nás</a>
+                    <a href="kontakt.html">Kontakt</a>
+                </nav>
+
+            </header>
+            <div id="obsah">
+                <main>
+                    <ul class="container">
+                        <li id="item1"> <a href="disk.html">
+                                <h1>Roko Disk</h1><img src="obr/disk.png" alt="roko" width="250">
+                                <h2>25 €</h2>
+                                <p>Tento disk pobaví celú rodinu</p>
+                            </a></li>
+                        <li id="item2">
+                            <h1>Roko Green</h1><img src="obr/green.jpg" alt="roko1" width="250">
+                            <h2>1 €</h2>
+                            <p>Regeračný nápoj</p>
+                        </li>
+                        <li id="item3">
+                            <h1>Roko Black</h1><img src="obr/black.jpg" alt="roko2" width="250">
+                            <h2>1 €</h2>
+                            <p>Koncentračný nápoj</p>
+                        </li>
+                        <li id="item4">
+                            <h1>Roko Tričko 19/20</h1><img src="obr/tshirt.png" alt="roko3" width="250">
+                            <h2>50 €</h2>
+                            <p>Tričko vytvorené s láskou</p>
+                        </li>
+                    </ul>
+                </main>
                 <br>
                 <br>
                 <br>
@@ -40,11 +57,12 @@
                 <br>
                 <br>
                 <footer>
-                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a> 
+                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a>
                     <p>© 2019 ROKOVCI</p>
                     <a href="#"><img src="obr/up.png" alt="HORE"></a>
                 </footer>
-    </div>
-    
-</body>
+            </div>
+
+    </body>
+
 </html>
