--- a/zoznamproduktov.html
+++ b/zoznamproduktov.html
@@ -29,24 +29,27 @@
                                 <h2>25 €</h2>
                                 <p>Tento disk pobaví celú rodinu</p>
                             </a></li>
-                        <li id="item2">
-                            <h1>Roko Green</h1><img src="obr/green.jpg" alt="roko1" width="250">
-                            <h2>1 €</h2>
-                            <p>Regeračný nápoj</p>
+                        <li id="item2"> <a href="green.html">
+                                <h1>Roko Green</h1><img src="obr/green.jpg" alt="roko1" width="250">
+                                <h2>1 €</h2>
+                                <p>Regeračný nápoj</p>
+                            </a>
                         </li>
-                        <li id="item3">
-                            <h1>Roko Black</h1><img src="obr/black.jpg" alt="roko2" width="250">
-                            <h2>1 €</h2>
-                            <p>Koncentračný nápoj</p>
+                        <li id="item3"> <a href="black.html">
+                                <h1>Roko Black</h1><img src="obr/black.jpg" alt="roko2" width="250">
+                                <h2>1 €</h2>
+                                <p>Koncentračný nápoj</p>
+                            </a>
                         </li>
-                        <li id="item4">
-                            <h1>Roko Tričko 19/20</h1><img src="obr/tshirt.png" alt="roko3" width="250">
-                            <h2>50 €</h2>
-                            <p>Tričko vytvorené s láskou</p>
+                        <li id="item4"> <a href="tshirt.html">
+                                <h1>Roko Tričko 19/20</h1><img src="obr/tshirt.png" alt="roko3" width="250">
+                                <h2>50 €</h2>
+                                <p>Tričko vytvorené s láskou</p>
+                            </a>
                         </li>
                     </ul>
                 </main>
-                
+
                 <footer>
                     <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a>
                     <p>© 2019 ROKOVCI</p>
