--- a/zoznamproduktov.html
+++ b/zoznamproduktov.html
@@ -24,24 +24,24 @@
             <div id="obsah">
                 <main>
                     <ul class="container">
-                        <li id="item1"> <a href="disk.html">
+                        <li id="item1"> <a href="produkt1-disk.html">
                                 <h1>Roko Disk</h1><img src="obr/disk.png" alt="roko" width="250">
                                 <h2>25 €</h2>
                                 <p>Tento disk pobaví celú rodinu</p>
                             </a></li>
-                        <li id="item2"> <a href="green.html">
+                        <li id="item2"> <a href="produkt2-green.html">
                                 <h1>Roko Green</h1><img src="obr/green.jpg" alt="roko1" width="250">
                                 <h2>1 €</h2>
                                 <p>Regeračný nápoj</p>
                             </a>
                         </li>
-                        <li id="item3"> <a href="black.html">
+                        <li id="item3"> <a href="produkt3-black.html">
                                 <h1>Roko Black</h1><img src="obr/black.jpg" alt="roko2" width="250">
                                 <h2>1 €</h2>
                                 <p>Koncentračný nápoj</p>
                             </a>
                         </li>
-                        <li id="item4"> <a href="tshirt.html">
+                        <li id="item4"> <a href="produkt4-tshirt.html">
                                 <h1>Roko Tričko 19/20</h1><img src="obr/tshirt.png" alt="roko3" width="250">
                                 <h2>50 €</h2>
                                 <p>Tričko vytvorené s láskou</p>
