--- a/produkt3-black.html
+++ b/produkt3-black.html
@@ -27,11 +27,13 @@
                 • Účinky tohto nápoja ucítiš ihneď po vypití!<br>
                 • Plnený v štýlovej 500ml fľaši<br>               
                 • Každá flaša je podpísaná Rokom!<br> 
-                • Objednávajte na tel. čísle 0900000001 <br> <br> <br>
+                • Objednávajte na tel. čísle 0900000001 <br>
+                •<a href="https://internetowysupermarket.pl/product-eng-20545-Roko-ROKO-Black-non-carbonated-drink-400ml.html" target="_blank"> <u>Stránka výrobcu</u> </a> <br> <br> <br> 
                 <p><span>Cena: 1€</span></p>    
                     </div>
             
-                   
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/j3kBbuqzeIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <br><br>     
 
         </div>
                 <footer>
