--- a/produkt4-tshirt.html
+++ b/produkt4-tshirt.html
@@ -27,7 +27,8 @@
                 • Vyrobené zo 100% bavlny<br>
                 • Perfektne sedí na každom type postavy<br>
                 • Dostupné vo veľkostiach XS,S,M,L,XL,XXL<br> 
-                • Objednávajte na tel. čísle 0900000001 <br> <br> <br>
+                • Objednávajte na tel. čísle 0900000001 <br> 
+                •<a href="https://roko-hip-hap-records.webnode.sk/" target="_blank"> <u>Stránka výrobcu</u> </a> <br> <br> <br>
                 <p><span>Cena: 50€</span></p>    
                     </div>
             
