--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>RokoShop | Kontakt</title>
 </head>
 <body>
     <div id="wrapper">
@@ -20,6 +20,7 @@
                     
                 </header>
                 <div id="obsah">
+                    <br>
                     <div class="clenovia" >
                         <img src="obr/tomas.jpg" alt="tomas" >
                         <h2>Tomáš Telepčák</h2>
