--- a/onas.html
+++ b/onas.html
@@ -41,7 +41,7 @@
                                 dodnes.
                                 <br>
                                 Po diskusii s hlavným pánom Rokom sme dokázali dostať do predaja aj jeho albumy a dokonca aj služby spomínané vyššie. Sme za to Rokovi
-                                nesmierne vďačný.                                         
+                                nesmierne vďační.                                         
                             </p>
                             <br><br><br><br><br>
                          
