--- a/produkt3-black.html
+++ b/produkt3-black.html
@@ -21,7 +21,7 @@
         <div id="obsah">
             <div id="produkt">
                 <img src="obr/black.jpg" alt="roko black">
-                 <h1>Roko green</h1>
+                 <h1>Roko black</h1>
                 • Najkvalitnejší koncentračný nápoj na trhu<br>
                 • Určený nielen pre športovcov<br>
                 • Účinky tohto nápoja ucítiš ihneď po vypití!<br>
