--- a/zoznamproduktov.html
+++ b/zoznamproduktov.html
@@ -32,7 +32,7 @@
                         <li id="item2"> <a href="produkt2-green.html">
                                 <h1>Roko Green</h1><img src="obr/green.jpg" alt="roko1" width="250">
                                 <h2>1 €</h2>
-                                <p>Regeračný nápoj</p>
+                                <p>Regeneračný nápoj</p>
                             </a>
                         </li>
                         <li id="item3"> <a href="produkt3-black.html">
