--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
                     <br> <br> 
                 </div>
                 <footer>
-                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a> 
+                    <a href="https://github.com/matushabala/rokoShop/archive/master.zip"><img src="obr/save.png" alt="DOWNLOAD"></a> 
                     <p>© 2019 ROKOVCI</p>
                     <a href="#"><img src="obr/up.png" alt="HORE"></a>
                 </footer>
