--- a/produkt4-tshirt.html
+++ b/produkt4-tshirt.html
@@ -36,7 +36,7 @@
 
         </div>
                 <footer>
-                    <a href=""><img src="obr/save.png" alt="DOWNLOAD"></a> 
+                    <a href="https://github.com/matushabala/rokoShop/archive/master.zip"><img src="obr/save.png" alt="DOWNLOAD"></a> 
                     <p>© 2019 ROKOVCI</p>
                     <a href="#"><img src="obr/up.png" alt="HORE"></a>
                 </footer>
